AC_PREREQ([2.66])
AC_INIT([libxon-obj], [1.0])

AC_PROG_CC
AC_PROG_CC_C99
AC_PROG_CXX

AC_C_BIGENDIAN

LT_INIT
gl_VISIBILITY

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_HEADERS([src/config.h])

AC_CHECK_ALIGNOF(int)
AC_CHECK_ALIGNOF(double)

AM_INIT_AUTOMAKE
AC_OUTPUT
